--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "firebase": "^12.2.1",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
